Prevent nav overflow for screens wider than 300px

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,16 +4,16 @@
 
 @layer components {
   .btn-primary {
-    @apply h-8 px-3 bg-white text-rose-700 font-bold rounded
+    @apply h-8 w-max px-3 bg-white text-rose-700 font-bold rounded
            hover:brightness-90 active:text-sky-800
   }
   .btn-secondary {
-    @apply h-8 px-3 bg-rose-700 text-white font-bold border rounded
+    @apply h-8 w-max px-3 bg-rose-700 text-white font-bold border rounded
            hover:brightness-110 active:bg-sky-800
   }
 
   .btn-special {
-    @apply h-8 px-3 bg-sky-800 text-white font-bold border rounded
+    @apply h-8 w-max px-3 bg-sky-800 text-white font-bold border rounded
            hover:brightness-110 active:border-none
   }
 }
